# weather-etl-pipeline

./: .gitignore  README.md  cities.csv  pyproject.toml
airflow/dags/: dag_pipeline.py
src/weather_etl/: __init__.py  extract_data.py  load.py  transform.py
